This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
12/5/18: Made it possible to save unnormalized hardware binned frames from K3
and get a gain reference for normalizing them.

12/2/18: Added option to save an mdoc file along with each frame stack.

12/2/18: Made changes so that the program can get dose rate from DM for K2 and
K3 cameras with GMS 3.31.

12/2/18: Added properties to offset the camera area being acquired.

12/2/18: Added property for setting the size of tilt steps in a bidirectional
return.

11/25/18: Possibly fix switching of low dose areas at zero image shift.

11/25/18: Prevented log from being opened twice on startup.

11/25/18: Made NoShutter keep beam blanked with screen down for a side-mounted
camera.

11/19/18: Added script commands to access the B axis of the holder.

11/19/18: Fixed ability to set mag in STEM on FEI scopes when staying in LM,
and to switch from STEM nanoprobe to microprobe when in LM.

11/19/18: Started storing size and position for individual script editors and
added an option (defaulted on) for editors to be restored when the program is
started or settings are read.

11/13/18: Fixed SkipAdvancedScripting to work with STEM.

11/12/18: Made it not change slit width when slit is out.

11/8/18: Fixed handling of focus in Low Dose on probe mode changes and going
in and out of LM.

11/8/18: Added delay in checking JEOL neutral values to prevent false alarms.

11/8/18: Fixed default to be that plugin cameras cannot return processed
images.

11/8/18: Added property to switch low dose areas at zero image shift.

11/8/18: Fixed averaging of dark references, broken 8/3/18.

11/5/18: Added optional maximum beam shift to AutocenterBeam and
CenterBeamFromImage commands.
