@@ -516,8 +516,26 @@
     <p>
       This list will be continually updated and eventually removed as 
       Gatan either solves the problem or clarifies the situation.&nbsp; (Last update 
-      October 14, 2018)</p>
+      December 9, 2018)</p>
     <ol>
+      <li>When the camera configuration is set for rotation by 90 or 270 and flip around 
+        Y, the operation is done incorrectly in DM and the image is rotated 180 degrees 
+        from what it should be.&nbsp; As a result, the summed images returned to 
+        SerialEM from dose-fractionation,&nbsp; frames saved with reoriention, and 
+        continuous mode images will all be turned by 180 degrees.&nbsp; There is a 
+        workaround in the Dec. 9 version. The procedure is:</li>
+        <ul>
+        <li>First make sure that the 3-7-0beta13 package is installed</li>
+          <li>Download the beta SerialEM.exe and replace the one in C:\ProgramFiles\SerialEM</li>
+          <li>Download SEMCCD-GMS3.01-64.dll, rename it to SEMCCD-GMS2-64.dll, and replace 
+            the one in C:\ProgramData\Gatan\Plugins after closing DM</li>
+          <li>If RotationAndFlip to -7 if it 5, or -5 if it is 7.&nbsp; Leave 
+            DMRotationAndFlip at 5 or 7, respectively</li>
+          <li>When a fixed version of DM is installed, you will need to remove the minus 
+            sign from the RotationAndFlip entry, change DMRotationAndFlip to match it, and 
+            change the configuration in DM , if necessary, to 90 to 270 degrees for a 7 or 
+            270 to 90 for a 5.</li> 
+        </ul>
       <li>Linear mode images during continuous acquisition have an incorrect offset 
         which would give a misleading dose rate estimate.&nbsp; This is currently 
         adjusted for in SerialEM.&nbsp; If the problem is ever resolved, there will 
@@ -530,9 +548,11 @@
         rates or with longer exposures, and hardware binning 
         by 4 is simply not used for these images because it 
         saturates so easily.</li>
-      <li>The table used for dose rate linearization is available only for 200 KV and 
-        even that table may still be refined.&nbsp; Dose rates and doses will be off 
-        somewhat at 300 KV.</li>
+      <li>The table used for dose rate linearization was available only for 200 KV and 
+        was preliminary.&nbsp; Dose rates and doses will be off 
+        somewhat at 300 KV.&nbsp; SerialEM will obtain the dose rate directly from DM in 
+        GMS 3.31, eliminating the need for the dose rate tables, but this is still being 
+        tested.</li>
       <li>SerialEM has no control over the alignment of frames by MotionCor2 available 
         in DM as an option, and apparently cannot trigger this alignment or access the 
         result.</li>
